logs/cm.log
Traceback (most recent call last):
  File "/home/boombox/PycharmProjects/cloud_machine_management/app/db/services/cluster.py", line 57, in get_all_cluster
    for i in eval(tags):
  File "<string>", line 1
    [            {                "Key": "environment",                "Value": "production"            },                                  {                        "key": "storage",                        "value": "production"                    }                ]]
                                                                                                                                                                                                                                                                         ^
SyntaxError: unexpected EOF while parsing

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/boombox/PycharmProjects/cloud_machine_management/app/rest/services/cluster_service.py", line 34, in get_all_clusters
    limit=limit)
  File "/home/boombox/PycharmProjects/cloud_machine_management/app/db/services/cluster.py", line 71, in get_all_cluster
    raise Exception(e)
Exception: unexpected EOF while parsing (<string>, line 1)

this is the pipeline--->[{'$match': {'properties.tags': {'$all': [{'$elemMatch': {'Key': 'environment', 'Value': 'production'}}, {'$elemMatch': {'key': 'storage', 'value': 'production'}}]}}}, {'$sort': {'created_date': -1}}, {'$skip': 0}, {'$limit': 2}]
this is the pipeline--->[{'$match': {'properties.tags': {'$all': [{'$elemMatch': {'Key': 'environment', 'Value': 'production'}}, {'$elemMatch': {'key': 'storage', 'value': 'production'}}]}}}, {'$sort': {'created_date': -1}}, {'$skip': 0}, {'$limit': 2}]
this is the pipeline--->[{'$match': {'properties.tags': {'$all': [{'$elemMatch': {'Key': 'environment', 'Value': 'production'}}, {'$elemMatch': {'key': 'storage', 'value': 'production'}}]}}}, {'$sort': {'created_date': -1}}, {'$skip': 0}, {'$limit': 2}]
cluster_name -  MyCluster2 already exists
cluster created 5e407bb868340c1f187354d2
this is the pipeline--->[{'$match': {'properties.tags': {'$all': [{'$elemMatch': {'key': 'environment', 'value': 'production'}}, {'$elemMatch': {'key': 'storage', 'value': 'production'}}]}}}, {'$sort': {'created_date': -1}}, {'$skip': 0}, {'$limit': 2}]
this is the pipeline--->[{'$match': {}}, {'$sort': {'created_date': -1}}, {'$skip': 0}, {'$limit': 2}]
this is the pipeline--->[{'$match': {'cluster_id': ObjectId('5e406a5fc2253fbbd3094783')}}, {'$sort': {'created_date': -1}}, {'$skip': 0}, {'$limit': 3}]
this is the pipeline--->[{'$match': {'properties.tags': {'$all': [{'$elemMatch': {'key': 'owner', 'value': 'TeamA'}}]}}}, {'$sort': {'created_date': -1}}, {'$skip': 0}, {'$limit': 3}]
